@@ -1,0 +1,74 @@
+{
+   "abstract" : "No-fuss instantiation of Moose objects using a single argument.",
+   "author" : [
+      "Aran Clary Deltac <bluefeet@gmail.com>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Minilla/v3.1.4, CPAN::Meta::Converter version 2.150010",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "MooseX-SingleArg",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "xt",
+         "inc",
+         "share",
+         "eg",
+         "examples",
+         "author",
+         "builder"
+      ]
+   },
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "Module::Build::Tiny" : "0.035"
+         }
+      },
+      "develop" : {
+         "requires" : {
+            "Test::CPAN::Meta" : "0",
+            "Test::MinimumVersion::Fast" : "0.04",
+            "Test::PAUSE::Permissions" : "0.04",
+            "Test::Pod" : "1.41",
+            "Test::Spellunker" : "v0.2.7"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Moose" : "1.23"
+         }
+      },
+      "test" : {
+         "requires" : {
+            "Test2::V0" : "0.000094"
+         }
+      }
+   },
+   "release_status" : "unstable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/bluefeet/MooseX-SingleArg/issues"
+      },
+      "homepage" : "https://github.com/bluefeet/MooseX-SingleArg",
+      "repository" : {
+         "type" : "git",
+         "url" : "git://github.com/bluefeet/MooseX-SingleArg.git",
+         "web" : "https://github.com/bluefeet/MooseX-SingleArg"
+      }
+   },
+   "version" : "0.08",
+   "x_contributors" : [
+      "Aran Deltac <aran@ziprecruiter.com>",
+      "Mohammad S Anwar <mohammad.anwar@yahoo.com>",
+      "Xavier Guimard <x.guimard@free.fr>"
+   ],
+   "x_serialization_backend" : "JSON::PP version 2.27300",
+   "x_static_install" : 1
+}
