@@ -1,10 +1,8 @@
-=pod
-
-=head1 NAME
+# NAME
 
 MooseX::SingleArg - No-fuss instantiation of Moose objects using a single argument.
 
-=head1 SYNOPSIS
+# SYNOPSIS
 
     package Person;
     use Moose;
@@ -18,10 +16,10 @@ MooseX::SingleArg - No-fuss instantiation of Moose objects using a single argume
     my $john = Person->new( 'John Doe' );
     print $john->name();
 
-=head1 DESCRIPTION
+# DESCRIPTION
 
 This module allows Moose instances to be constructed with a single argument.
-Your class or role must use this module and then use the single_arg sugar to
+Your class or role must use this module and then use the single\_arg sugar to
 declare which attribute will be assigned the single argument value.
 
 If the class is constructed using the typical argument list name/value pairs,
@@ -30,7 +28,7 @@ single non-hashref value then that argument will be assigned to whatever
 attribute you have declared.
 
 The reason for this module's existence is that when people want this feature
-they usually find L<Moose::Cookbook::Basics::Person_BUILDARGSAndBUILD> which
+they usually find [Moose::Cookbook::Basics::Person\_BUILDARGSAndBUILD](https://metacpan.org/pod/Moose::Cookbook::Basics::Person_BUILDARGSAndBUILD) which
 asks that something like the following be written:
 
     around BUILDARGS => sub {
@@ -48,16 +46,16 @@ asks that something like the following be written:
 The above is complex boilerplate for a simple feature.  This module aims to make
 it simple and fool-proof to support single-argument Moose object construction.
 
-=head1 INIT_ARG BEHAVIOR
+# INIT\_ARG BEHAVIOR
 
-If setting a custom init_arg for an attribute which you will be assigning as the
-single_arg then use the init_arg value, rather than the attribute key, for it.
+If setting a custom init\_arg for an attribute which you will be assigning as the
+single\_arg then use the init\_arg value, rather than the attribute key, for it.
 For example:
 
     single_arg 'moniker';
     has name => ( is=>'ro', isa=>'Str', init_arg=>'moniker' );
 
-=head1 FORCING SINGLE ARG PROCESSING
+# FORCING SINGLE ARG PROCESSING
 
 An optional force parameter may be specified:
 
@@ -70,33 +68,22 @@ more than one argument is passed then an error will be thrown.  The benefit of f
 single argument processing is that hashrefs may now be used as the value of the single
 argument when force is on.
 
-=head1 SEE ALSO
+# SEE ALSO
 
-L<MooseX::OneArgNew> solves the same problem that this module solves.  I considered using OneArgNew
+[MooseX::OneArgNew](https://metacpan.org/pod/MooseX::OneArgNew) solves the same problem that this module solves.  I considered using OneArgNew
 for my own needs, but found it oddly cumbersome and confusing.  Maybe that's just me, but I hope that
 this module's design is much simpler to comprehend and more natural to use.
 
-=head1 AUTHOR
+# AUTHOR
 
 Aran Clary Deltac <bluefeet@gmail.com>
 
-=head1 CONTRIBUTORS
+# CONTRIBUTORS
 
-=over
+- Xavier Guimard <x.guimard@free.fr>
+- Mohammad S Anwar <mohammad.anwar@yahoo.com>
 
-=item *
-
-Xavier Guimard <x.guimardE<64>free.fr>
-
-=item *
-
-Mohammad S Anwar <mohammad.anwarE<64>yahoo.com>
-
-=back
-
-=head1 LICENSE
+# LICENSE
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
-
-=cut
